--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -70,6 +70,7 @@
   --z-stars: 0;
   --z-globe: 1;
   --z-overlay: 10;
+  --z-controls: 15;
   --z-header: 50;
   --z-tabbar: 50;
   --z-loading: 100;
